# Agentic_RAG

./: run_app.bat
backend/: .dockerignore  .gitignore  Dockerfile  content_processor.py  docker-compose.yml  inspect_db.py  main.py  pyproject.toml  rag_engine.py  requirements.txt
backend/components/: config.py  document_processor.py  llm.py  rag_graph.py  state.py  vector_store.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx
