[project]
name = "sample-rag"
version = "0.1.0"
description = "RAG Backend"
authors = [
    {name = "User",email = "user@example.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-chroma>=0.2.0",
    "langchain-groq>=0.2.3",
    "langchain-huggingface>=0.1.2",
    "sentence-transformers>=3.3.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "chromadb>=0.6.3",
    "openai>=1.59.6",
    "python-multipart>=0.0.20",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "numpy>=2.2.1",
    "langgraph>=0.2.61"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
